# personal-website

./: .gitignore  Cargo.toml  rag_service.py  test_rag.py
data/: initial_contents.json
scripts/: add_content.py  import_data.py  init_db.sql  view_contents.py
src/: main.rs
src/models/: content.rs  mod.rs  personal_info.rs
src/routes/: about.rs  admin.rs  chat.rs  content.rs  home.rs  mod.rs  photography.rs  skills.rs
src/services/: mod.rs  rag_service.rs
src/static/css/: style.css
src/templates/: about.html  base.html  home.html  photography.html  skills.html
src/templates/admin/: dashboard.html  login.html
src/utils/: auth.rs
